1999-08-23  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/menus.c (ReadMenuFace): fixed missing parsing of gradients

1999-08-23  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c (menuShortcuts): fixe Right key in menus.

Sat Aug 21 09:55:27 1999  DanEspen  <dje@blue>

	* NEWS, fvwm/fvwm2.1: Describe new key shortcuts, and some of the ones
	that were missed.
	Describe FvwmAnimate "sendtomodule" command for arbitrary animation.

	* fvwm/menus.c (menuShortcuts): Tab acts like down arrow, shift tab
	acts like up arrow, space selects.

1999-08-21  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/fvwm2.1: added COLOR GRADIENTS section

	* fvwm/menus.c (paint_item):
	(paint_menu):
	* fvwm/borders.c (DrawButton): Menus and window decorations can use
	all eight kinds of gradients

	* libs/Graphics.c (CreateGradientPixmap): Function can draw into a
	given drawable.

	* fvwm/fvwm.c (main): removed save_under attribute for feedback window.
	It actually slow things down instead of speeding them up.

	* fvwm/move_resize.c (moveLoop):
	* fvwm/virtual.c (HandlePaging): fixed slow movement of windows with
	some ideas from icewm

1999-08-20  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/move_resize.c (InteractiveMove): use new function
	GetLocationFromEventOrQuery

	* libs/Pointer.c (GetLocationFromEventOrQuery): new file and function

	* fvwm/borders.c: removed debug code causing title bars not to draw
	properly with less that 20 bitplanes :-)

	* libs/Graphics.c (IsGradientTypeSupported): new convenience function

	* fvwm/builtins.c (ReadButtonFace):
	* fvwm/borders.c (DrawButton): experimental implementation of
	[DBSCRY]-Gradients in the title/border/button style. Very inefficient,
	but looks nice.

	* libs/Graphics.c (CreateGradientPixmapFromString):
	(CreateGradientPixmap): function split into two separate functions

	* libs/Graphics.c (CalculateGradientDimensions): new function from code
	originally in CreateGradientPixmap

	* fvwm/borders.c (DrawButton):