@@ -4,7 +4,8 @@
 #  This script demonstates the fvwm menu DynamicPopupAction functionality.
 #  You can use a more configurable fvwm-menu-directory instead.
 #  The line below almost exactly simulates this script:
-#    fvwm-menu-directory --reuse --links --order 4 --exec-file vi --name NAME
+#    fvwm-menu-directory --reuse --links --order 4 --exec-file vi --name NAME \
+#      --special-dirs --exec-title -
 ###
 #
 #  Modification History
